# scanarr

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yaml
scanarr/: main.py
