[build-system]
requires = [
  "hatchling",
  "hatch-vcs"
]
build-backend = "hatchling.build"

[project]
name = "scanarr"
dynamic = ["version"]
description = "Search Script for scanning files and folders against trackers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Multimedia",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
    "bencodepy>=0.9.5",
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "types-requests",
]

[project.urls]
Documentation = "https://github.com/arrscanarr/scanarr#readme"
Issues = "https://github.com/arrscanarr/scanarr/issues"
Source = "https://github.com/arrscanarr/scanarr"

[project.scripts]
scanarr = "scanarr.main:main"

[tool.hatch.version]
source = "vcs"